--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,14 @@ readme = "README.md"
 packages = [{include = "misc"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-pandas = "^1.5.3"
-selenium = "^4.8.0"
-requests = "^2.28.2"
-pyyaml = "^6.0"
+python = "^3.12"
+pandas = "^2.2.3"
+requests = "^2.32.3"
+pyyaml = "^6.0.2"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.3"
 
 [build-system]
 requires = ["poetry-core"]
